vzmigrate: pass --verbose to vzctl in case of -vv
In case our verbosity is set to 2 ('-v -v' or '-vv')
or more let's pass --verbose flag to vzctl.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -272,6 +272,7 @@ done
 
 if [ $verbose -gt 1 ]; then
 	RSYNC_OPTIONS="$RSYNC_OPTIONS -v"
+	VZCTL="$VZCTL --verbose"
 fi
 if [ $verbose -gt 2]; then
 	SSH_OPTIONS="$SSH_OPTIONS -v"
