--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -443,7 +443,9 @@ else
 fi
 
 log 1 "Syncing private"
-if ! $RSYNC "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"; then
+$RSYNC "$VE_PRIVATE" "root@$host:${VE_PRIVATE%/*}"
+# Ignore rsync error 24 "Partial transfer due to vanished source files"
+if [ $? != 24 ] && [ $? != 0 ]; then
 	log 0 "Failed to sync container private areas"
 	undo_quota_on
 	exit $MIG_ERR_COPY
