--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -11,24 +11,25 @@ _get_ves()
 	case $cmd in
 		create)
 			# create a new CTID, by increasing the last one
-			local veids=`@SBINDIR@/vzlist -H -a -octid | tail -1`
+			local veids=`@SBINDIR@/vzlist -H -a -octid \
+				2>/dev/null | tail -1`
 			[ -n "$veids" ] || veids=100
 			echo $((veids+1))
 			;;
 		start|mount|umount|destroy|delete)
 			# stopped CTs
-			@SBINDIR@/vzlist -H -S -octid
-			@SBINDIR@/vzlist -H -S -oname | $rm_empty
+			@SBINDIR@/vzlist -H -S -octid 2>/dev/null
+			@SBINDIR@/vzlist -H -S -oname 2>/dev/null | $rm_empty
 			;;
 		stop|enter|exec*)
 			# running CTs
-			@SBINDIR@/vzlist -H -octid
-			@SBINDIR@/vzlist -H -oname | $rm_empty
+			@SBINDIR@/vzlist -H -octid 2>/dev/null
+			@SBINDIR@/vzlist -H -oname 2>/dev/null | $rm_empty
 			;;
 		*)
 			# All CTs
-			@SBINDIR@/vzlist -H -a -octid
-			@SBINDIR@/vzlist -H -a -oname | $rm_empty
+			@SBINDIR@/vzlist -H -a -octid 2>/dev/null
+			@SBINDIR@/vzlist -H -a -oname 2>/dev/null | $rm_empty
 			;;
 	esac
 }
@@ -195,7 +196,7 @@ _vzctl()
 				fi
 				# NAME or ID ?
 				LIST_OPT=`echo $ve | awk '/[a-zA-Z]/ {print "-N"}'`
-				local ips="`@SBINDIR@/vzlist -H -o ip $LIST_OPT $ve | grep -vi -`"
+				local ips="`@SBINDIR@/vzlist -H -o ip $LIST_OPT $ve 2>/dev/null | grep -vi -`"
 				COMPREPLY=( $( compgen -W "$ips all" -- $cur ) )
 				;;
 			--netif_del)
