bash_completion: remove unneeded code
We tried to distinguish between CTID and CT NAME, and used
"vzlist -N ${name}" in the latter case. There is no need to use -N,
vzlist supports CT NAMES natively, so remove this kludge.

BTW, the code that was used to distinguish had an assumption that
CT NAME should contain a [a-zA-Z] character. This is incorrect.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -194,9 +194,7 @@ _vzctl()
 					# --verbose or --quiet used
 					ve=${COMP_WORDS[3]}
 				fi
-				# NAME or ID ?
-				LIST_OPT=`echo $ve | awk '/[a-zA-Z]/ {print "-N"}'`
-				local ips="`@SBINDIR@/vzlist -H -o ip $LIST_OPT $ve 2>/dev/null | grep -vi -`"
+				local ips="`@SBINDIR@/vzlist -H -o ip $ve 2>/dev/null | grep -vi -`"
 				COMPREPLY=( $( compgen -W "$ips all" -- $cur ) )
 				;;
 			--netif_del)
