bash_completion: fix autocompletion of CTID when global option is used
This is similar to previous commit, but for the case when we need
to autocomplete CTID after a command after a global option
(e.g. "vzctl --verbose set <tab>"). Old code made a wrong assumption that
CTID is a number, so if previous argument is not a number then we need
a number at the current position.

Change this check to remove the false assumption, let's check if the first
argument starts with "--", in that case it was a global option followed
by a command, and now we indeed need CTID.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -107,8 +107,8 @@ _vzctl()
 		;;
 
 	*) # COMP_CWORD >= 3
-		if [[ $COMP_CWORD -eq 3 && ! $prev != '^[1-9][0-9]*$' ]]; then
-			# CTID
+		if [ $COMP_CWORD -eq 3 -a ${COMP_WORDS[1]::2} = "--" ]; then
+			# Global option was used, need CTID here
 			COMPREPLY=( $( compgen -W "$(_get_ves $prev)" -- $cur ) )
 		else
 
