Don't prepend full path for ip command
Some distributions have ip in /sbin some in /bin. Actually it's good
idea to drop path completely and let users to set $PATH correctly.

--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -38,7 +38,7 @@ VE_STATE_DIR="/var/lib/vzctl/veip/"
 CONF_DIR="@PKGCONFDIR@/conf/"
 
 ARPSEND_CMD="arpsend -c 1 -w 1"
-IP_CMD=/sbin/ip
+IP_CMD="ip"
 
 # Prints error message and exits
 # Parameters:
