vzeventd: initial implementation
Recent OpenVZ kernels provided vzevent module which sends CT
start/stop/reboot events (see bug #1427). This commit adds
vzevent daemon, which reacts to such events and performs
appropriate actions.

Before vzeventd, the problem of restarting a CT which was rebooted from
the inside, and the problem of cleaning up CT0 networking for a CT which
was stopped from the inside were solved by using shell scripts run from
cron, with some trickery inside a CT to mark it for reboot. The solution
was suboptimal, cumbersome and ugly -- hopefully now with vzevent those
kludges will be removed (by a separate commit).

vzeventd is implemented as a daemon, plus there is a separate vzeventd
initscript to start/stop it (and also load vzevent kernel module with
the appropriate parameter). Since we now have two initscripts, common code
(for init.d compatibility between Red Hat/Debian/SUSE) is moved into
a separate file vzfunctions which is sourced from both initscripts.

vzeventd listens to the events from the kernel (delivered via netlink
socket). Current list of known events and associated vzeventd actions are:
	start		ignore
	stop		run /usr/lib/vzctl/scripts/vzevent-stop
	mount		ignore
	umount		ignore
	reboot		run /usr/lib/vzctl/scripts/vzevent-reboot

Events mount/umount are currently not implemented in the kernel for simfs.

Event 'stop' is generated when CT is being stopped (either by vzctl or
from inside the container, e.g. by executing halt). Script vzevent-stop
does the following:
	1. Waits till CT is stopped
	2. Umounts CT if it's not unmounted
	3. Cleans up CT0 network setup (i.e. arp and route records)

Event 'reboot' is generated when CT is rebooted from inside (e.g. by
executing reboot). Script vzevent-reboot does the following:
	1. Waits till CT is stopped
	2. Starts it (by running vzctl start).

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/Makefile.am
+++ b/etc/init.d/Makefile.am
@@ -15,7 +15,7 @@
 #  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-INITSCRIPTS = vz-redhat vz-gentoo
+INITSCRIPTS = vz-redhat vz-gentoo vzeventd-redhat vzeventd-gentoo vzfunctions
 
 EXTRA_DIST = $(INITSCRIPTS:%=%.in)
 
@@ -25,7 +25,9 @@ include $(top_srcdir)/pathsubst.am
 
 install-redhat: vz-redhat
 	$(mkinstalldirs) $(DESTDIR)$(initddir)
+	$(INSTALL_SCRIPT) vzfunctions $(DESTDIR)$(initddir)/vzfunctions
 	$(INSTALL_SCRIPT) vz-redhat $(DESTDIR)$(initddir)/vz
+	$(INSTALL_SCRIPT) vzeventd-redhat $(DESTDIR)$(initddir)/vzeventd
 
 install-suse: install-redhat
 
@@ -34,3 +36,4 @@ install-debian: install-redhat
 install-gentoo: vz-gentoo
 	$(mkinstalldirs) $(DESTDIR)$(initddir)
 	$(INSTALL_SCRIPT) vz-gentoo $(DESTDIR)$(initddir)/vz
+	$(INSTALL_SCRIPT) vzeventd-gentoo $(DESTDIR)$(initddir)/vzeventd
