init.d/vzeventd-redhat: fix desc field
Apparently a left over from the copy-paste.

--- a/etc/init.d/vzeventd-redhat.in
+++ b/etc/init.d/vzeventd-redhat.in
@@ -15,7 +15,7 @@
 # X-Start-Before: vz
 # X-Stop-After: vz
 # Short-Description: start and stop vzeventd
-# Description: ntpd is the NTPv4 s OpenVZ events daemon.
+# Description: vzeventd is the OpenVZ events daemon.
 #              It takes care of events sent by the OpenVZ kernel
 #              and performs required actions associated with those events.
 ### END INIT INFO
