man/vzeventd.8: add
Add the man page, required by Debian standards and useful overall.

[kir@openvz.org: additions to man page; added it to vzctl.spec]

http://bugzilla.openvz.org/1635

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -27,7 +27,9 @@ man_MANS = arpsend.8 \
            vzmigrate.8 \
            vzpid.8 \
            vzsplit.8 \
-           vzifup-post.8
+           vzifup-post.8 \
+           vzeventd.8
+
 
 EXTRA_DIST = $(man_MANS)
 
