--- a/pathsubst.am
+++ b/pathsubst.am
@@ -22,7 +22,8 @@ pathsubst_RULES = \
 	s!@'PKGCONFDIR'@!$(pkgconfdir)!g; \
 	s!@'VPSCONFDIR'@!$(vpsconfdir)!g; \
 	s!@'PKGDATADIR'@!$(pkgdatadir)!g; \
-	s!@'PKGLIBDIR'@!$(pkglibdir)!g;
+	s!@'PKGLIBDIR'@!$(pkglibdir)!g; \
+	s!@'VZLIBDIR'@!$(vzlibdir)!g;
 
 pathsubst = sed -e '$(pathsubst_RULES)'
 
