init.d/vzeventd: fix to support Debian and SUSE
Well, this wasn't tested yet, but I hope I did it right.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/initd-functions.in
+++ b/etc/init.d/initd-functions.in
@@ -83,4 +83,29 @@ __echo()
 	fi
 }
 
+vzdaemon_start()
+{
+	case DISTR in
+	   redhat)
+		daemon $*
+		;;
+	   suse)
+		startproc $*
+		;;
+	   debian)
+		start-stop-daemon --start --quiet --exec $*
+		;;
+	esac
+}
 
+vzdaemon_stop()
+{
+	case DISTR in
+	   redhat|suse)
+		killproc $*
+		;;
+	   debian)
+		start-stop-daemon --stop --quiet --exec $*
+		;;
+	esac
+}
