--- a/etc/init.d/vzeventd-redhat.in
+++ b/etc/init.d/vzeventd-redhat.in
@@ -22,7 +22,7 @@
 #              and performs required actions associated with those events.
 ### END INIT INFO
 
-. @VZLIBDIR@/vzfunctions
+. @VZLIBDIR@/initd-functions
 
 prog=vzeventd
 lockfile=$VARLOCK/$prog
