initd-functions: fix a typo
s/DISTR/$DISTR/ in shell code...

Reported-by: "Mehdi Dogguy" <mehdi@dogguy.org>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/initd-functions.in
+++ b/etc/init.d/initd-functions.in
@@ -84,7 +84,7 @@ __echo()
 
 vzdaemon_start()
 {
-	case DISTR in
+	case $DISTR in
 	   redhat)
 		daemon $*
 		;;
@@ -99,7 +99,7 @@ vzdaemon_start()
 
 vzdaemon_stop()
 {
-	case DISTR in
+	case $DISTR in
 	   redhat|suse)
 		killproc $*
 		;;
