etc/init.d/initd-functions: fix start/stop for Debian
Apparently we need to provide full path to --exec argument
for start-stop-daemon, otherwise it doesn't work.

http://bugzilla.openvz.org/1685

Reported-by: Ola Lundqvist <ola@inguza.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/initd-functions.in
+++ b/etc/init.d/initd-functions.in
@@ -92,7 +92,9 @@ vzdaemon_start()
 		startproc $*
 		;;
 	   debian)
-		start-stop-daemon --start --quiet --exec $*
+		local p=$1
+		shift
+		start-stop-daemon --start --quiet --exec @SBINDIR@/$p -- $*
 		;;
 	esac
 }
@@ -104,7 +106,9 @@ vzdaemon_stop()
 		killproc $*
 		;;
 	   debian)
-		start-stop-daemon --stop --quiet --exec $*
+		local p=$1
+		shift
+		start-stop-daemon --stop --quiet --exec @SBINDIR@/$p -- $*
 		;;
 	esac
 }
