etc/init.d/vzeventd-redhat: fix 'status' for Debian
Apparently not all of Debian initscripts provide status,
and there's no built-in 'status' we relied on. Let's create
our own version of 'status'.

http://bugzilla.openvz.org/1685

Reported-by: Ola Lundqvist <ola@inguza.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/initd-functions.in
+++ b/etc/init.d/initd-functions.in
@@ -112,3 +112,26 @@ vzdaemon_stop()
 		;;
 	esac
 }
+
+vzdaemon_status()
+{
+	local p=$1
+	shift
+
+	case $DISTR in
+	   redhat|suse)
+		status $p
+		;;
+	   debian)
+		echo -n "Checking status of $p... "
+		start-stop-daemon --start -t --quiet --exec @SBINDIR@/$p -- $*
+		if [ $? -eq 0 ]; then
+			print_success "(running)"
+			return 0
+		else
+			print_failure "(not running)"
+			return 1
+		fi
+		;;
+	esac
+}
