--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -256,6 +256,13 @@ start() {
 stop() {
 	check_config || return
 
+	# Avoid stop action inside a CT, check we are in CT0
+	if ! egrep -q '^[[:space:]]*0:[[:space:]]' \
+			/proc/user_beancounters; then
+		eerror "Looks like we are inside a container!"
+		return 1
+	fi
+
 	local mod
 
 	stop_ve
