--- a/etc/bash_completion.d/vzctl.sh.in
+++ b/etc/bash_completion.d/vzctl.sh.in
@@ -48,7 +48,8 @@ _vzctl()
 
 	local vzctl_common_opts="--quiet --verbose --help --version"
 	local vzctl_cmds="create destroy delete mount umount chkpnt restore \
-		set start stop restart status enter exec exec2 runscript"
+		set start stop restart status quotaon quotaoff quotainit \
+		enter exec exec2 runscript"
 	local vzctl_create_opts="--ostemplate --config --private --root \
 		--ipadd --hostname --name --description"
 	local vzctl_set_opts="--save --onboot --root --private \
