scripts/vps-create: use -Sp options for tar
-S: handle sparse files more effectively
-p: ignore umask, use exact permissions from the archive

Reported-by: Solar Designer <solar@openwall.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vps-create.in
+++ b/scripts/vps-create.in
@@ -30,7 +30,7 @@ vzcheckvar VE_PRVT PRIVATE_TEMPLATE
 create_prvt()
 {
 	local TMP AVAIL NEEDED HEADER OPT
-	local TAR_OPT="--numeric-owner"
+	local TAR_OPT="--numeric-owner -Sp"
 
 	[ -d "$VE_PRVT" ] ||
 		vzerror "Destination directory does not exist: $VE_PRVT" ${VZ_FS_NEW_VE_PRVT}
